@@ -16,12 +16,120 @@
 
 #include <ecl/ecl.h>
 #include <time.h>
+#include <stdio.h>
+#include <stdlib.h>
+
+#if 0
+
+/*
+ * Crappy random number generator
+ */
+
+cl_object
+init_random_state()
+{
+	return (cl_object)time(0);
+}
+
+static double
+generate_double(cl_object rs)
+{
+	rs->random.value
+	= rs->random.value
+	+ (rs->random.value<<2)
+	+ (rs->random.value<<17)
+	+ (rs->random.value<<27);
+	rs->random.value = rs->random.value & 0xffffffff;
+	return (double)(rs->random.value>>1) / (4294967296.0/2.0);
+}
+
+#else
+
+/*
+ * Mersenne-Twister random number generator
+ */
+
+/* Period parameters */  
+#define MT_N 624
+#define MT_M 397
+#define MATRIX_A 0x9908b0dfUL   /* constant vector a */
+#define UPPER_MASK 0x80000000UL /* most significant w-r bits */
+#define LOWER_MASK 0x7fffffffUL /* least significant r bits */
+
+#define ulong unsigned long
+
+cl_object
+init_random_state()
+{
+	cl_object a = ecl_alloc_simple_vector(MT_N + 1, aet_index);
+	ulong *mt = a->vector.self.index;
+	int j;
+#if !defined(_MSC_VER) && !defined(mingw32)
+	FILE *fp = fopen("/dev/urandom","r");
+	if (fp) {
+		fread(mt, sizeof(*mt), MT_N, fp);
+		for (j=0; j < MT_N; j++){
+			mt[j] &= 0xffffffffUL;
+		}
+		fclose(fp);
+	} else
+#endif	
+	{
+		/* cant get urandom, use crappy source */
+		mt[0] = (rand() + time(0)) & 0xffffffffUL;
+		for (j=1; j < MT_N; j++){
+			mt[j] = (1812433253UL * (mt[j-1] ^ (mt[j-1] >> 30)) + j);
+			mt[j] &= 0xffffffffUL;
+		}
+	}
+	mt[MT_N] = MT_N+1;
+	return a;
+}
+
+ulong
+generate_int32(cl_object state)
+{
+	static ulong mag01[2]={0x0UL, MATRIX_A};
+	ulong y;
+	ulong *mt = state->vector.self.index;
+	if (mt[MT_N] >= MT_N){
+		/* refresh data */
+		int kk;
+		for (kk=0; kk < (MT_N - MT_M); kk++) {
+			y = (mt[kk] & UPPER_MASK) | (mt[kk+1] & LOWER_MASK);
+			mt[kk] = mt[kk + MT_M] ^ (y >> 1) ^ mag01[y & 0x1UL];
+		}
+		for (; kk < (MT_N - 1); kk++) {
+			y = (mt[kk] & UPPER_MASK) | (mt[kk+1] & LOWER_MASK);
+			mt[kk] = mt[kk+(MT_M-MT_N)] ^ (y >> 1) ^ mag01[y & 0x1UL];
+		}
+		y = (mt[MT_N-1] & UPPER_MASK) | (mt[0] & LOWER_MASK);
+		mt[MT_N-1] = mt[MT_M-1] ^ (y >> 1) ^ mag01[y & 0x1UL];
+ 		mt[MT_N] = 0;
+	}
+	/* get random 32 bit num */
+	y = mt[mt[MT_N]++];
+	/* Tempering */
+	y ^= (y >> 11);
+	y ^= (y << 7) & 0x9d2c5680UL;
+	y ^= (y << 15) & 0xefc60000UL;
+	y ^= (y >> 18);
+	return y;
+}
+
+static double
+generate_double(cl_object state)
+{
+	return generate_int32(state) * (1.0 / 4294967296.0);
+}
+
+#endif
 
 static cl_object
 rando(cl_object x, cl_object rs)
 {
 	cl_object z;
-	double d = (double)(rs->random.value>>1) / (4294967296.0/2.0);
+	double d = generate_double(rs->random.value);
  AGAIN:
 	if (!ecl_plusp(x)) {
 		goto ERROR;
@@ -62,9 +170,8 @@ cl_object
 ecl_make_random_state(cl_object rs)
 {
         cl_object z = cl_alloc_object(t_random);
-
 	if (rs == Ct) {
-		z->random.value = time(0);
+		z->random.value = init_random_state();
 	} else {
 		if (Null(rs)) {
 			rs = ecl_symbol_value(@'*random-state*');
@@ -77,22 +184,9 @@ ecl_make_random_state(cl_object rs)
 	return(z);
 }
 
-static void
-advance_random_state(cl_object rs)
-{
-	rs->random.value
-	= rs->random.value
-	+ (rs->random.value<<2)
-	+ (rs->random.value<<17)
-	+ (rs->random.value<<27);
-	rs->random.value = rs->random.value & 0xffffffff;
-}
-
-
 @(defun random (x &optional (rs ecl_symbol_value(@'*random-state*')))
 @
 	rs = ecl_check_cl_type(@'random', rs, t_random);
-	advance_random_state(rs);
 	@(return rando(x, rs));
 @)
 
