@@ -50,6 +50,9 @@ ECL 1.0:
 
  - Using version 4.2.1 of the GMP library.
 
+ - Random number generator based on the Mersenne-Twister algorithm (Based on
+   code contributed by Roy Zywina).
+
 * Bugs fixed:
 
  - STREAMP signals an error for Gray streams.
